Fix contrast

--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ a:hover {
 .texture-paper::before {
     background: url("img/texture-paper.png");
     background-size: 280px 280px;
+    opacity: 50%;
 }
 
 .b-parallax {
@@ -696,7 +697,7 @@ p {
 
 .cta-hero {
     margin-top: 22px;
-    color: #000000 !important;
+    color: #FFFFFF !important;
     text-transform: uppercase;
     padding: 12px 28px 12px 28px;
     font-size: 16px;
@@ -775,7 +776,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #BD5A3A;
 }
 
 .tc-white {
@@ -783,8 +784,8 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
-    color: #000000!important;
+    background: #BD5A3A;
+    color: #FFFFFF !important;
 }
 
 .btn-atomic-tangerine:hover {
